javadoc and deprecation fixes